# copbot_rs

./: .gitignore  Cargo.toml  debug.txt  readme.md
resources/: Copbot.glade
src/: benchmark.rs  bot.rs  bot_utils.rs  gui.rs  log.rs  main.rs  profileHandler.rs  req_handler.rs
